--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "docs-start": "turbo run start --scope=\"@calcom/docs\"",
     "dx": "turbo run dx",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "heroku-postbuild": "turbo run @calcom/web#build",
+    "heroku-prebuild": "yarn install",
+    "heroku-postbuild": "cd ../.. && yarn build",
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint:fix",
     "lint:report": "turbo run lint:report",
